01-Terraform/4.2-EKS-S3/2-eks-vpc/k8s/ingress/nlb-ingres.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-nlb
  namespace: demo-1
  labels:
    app: example-nlb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: example-nlb
  template:
    metadata:
      labels:
        app: example-nlb
    spec:
      containers:
        - name: example-nlb
          image: nginx:latest
          ports:
            - containerPort: 80

---
# Service
apiVersion: v1
kind: Service
metadata:
  name: example-nlb-service
  namespace: demo-1
  labels:
    app: example-nlb
spec:
  type: ClusterIP
  #type: NodePort
  selector:
    app: example-nlb
  ports:
    - port: 80
      targetPort: 80
---
# Si no tienes un IngressClass para NLB en tu clúster
# apiVersion: networking.k8s.io/v1
# kind: IngressClass
# metadata:
#   name: nlb
# spec:
#   controller: "ingress.k8s.aws/network-load-balancer"

apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nlb
spec:
  controller: ingress.k8s.aws/networking

---
# Ingress NLB
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-app-nlb-ingress
  namespace: demo-1
  annotations:
    # # kubernetes.io/ingressClassName: nlb # Asegúrate de que coincida con la IngressClass
    # # service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
    # service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "TCP" # Cambia a "TCP" si es necesario
    # # service.beta.kubernetes.io/aws-load-balancer-target-group-attributes: "stickiness.enabled=true"
    # kubernetes.io/ingress.class: nlb
    # service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    # #service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing" # o "internal"
    # service.beta.kubernetes.io/aws-load-balancer-scheme: "internal" # o "internal"
    # #service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "instance"
    # service.beta.kubernetes.io/aws-load-balancer-manage-backend-security-group-rules: "true"
  labels:
    app: example-nlb
spec:
  ingressClassName: alb
  rules:
    - host: nlb.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example-nlb-service
                port:
                  number: 80
